--- a/VARCalculator/packages.config
+++ b/VARCalculator/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Deedle" version="1.2.5" targetFramework="net45" />
   <package id="DuoVia.FuzzyStrings" version="1.0.1" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.6.0-alpha009" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="3.20.0" targetFramework="net45" />
 </packages>
